--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "dependencies": {
+    "axios": "^1.6.5",
+    "ffi-rs": "^1.0.43",
+    "workerpool": "^9.0.4"
+  },
   "scripts": {
     "postinstall": "node ./scripts/postinstall.js"
   },
